--- a/assets/css/social-icons.css
+++ b/assets/css/social-icons.css
@@ -1,20 +1,3 @@
-/* line 1, ../../scss/_base.scss */
-.icon-list {
-  margin: 0;
-  list-style: none;
-  display: inline-block;
-  overflow: hidden;
-}
-/* line 7, ../../scss/_base.scss */
-.icon-list > li {
-  float: left;
-  margin-right: 10px;
-}
-/* line 11, ../../scss/_base.scss */
-.icon-list > li a {
-  text-decoration: none;
-}
-
 @font-face {
   font-family: "social-icons";
   src: url('../fonts/social-icons.eot');
@@ -24,7 +7,7 @@
 }
 
 /* Use the following CSS code if you want to use data attributes for inserting your sis */
-/* line 15, ../../scss/_social-icons.scss */
+/* line 15, ../../scss/_icons.scss */
 [data-si]:before {
   font-family: 'social-icons';
   content: attr(data-si);
@@ -40,7 +23,7 @@ Instead of a list of all class selectors,
 you can use the generic selector below, but it's slower:
 [class*="ico-"] {
 */
-/* line 33, ../../scss/_social-icons.scss */
+/* line 33, ../../scss/_icons.scss */
 .si-twitter, .si-facebook, .si-googleplus, .si-youtube,
 .si-flickr, .si-github, .si-wordpress, .si-blogger, .si-tumblr,
 .si-yahoo, .si-soundcloud, .si-skype, .si-reddit, .si-lastfm,
@@ -55,30 +38,30 @@ you can use the generic selector below, but it's slower:
   -webkit-font-smoothing: antialiased;
 }
 
-/* line 44, ../../scss/_social-icons.scss */
+/* line 44, ../../scss/_icons.scss */
 .si, .si-square, .si-circle {
   color: #666666;
   display: inline-block;
   font-size: 22px;
   padding: 2px;
 }
-/* line 50, ../../scss/_social-icons.scss */
+/* line 50, ../../scss/_icons.scss */
 .si.si-small, .si-small.si-square, .si-small.si-circle {
   font-size: 16px;
 }
 
-/* line 55, ../../scss/_social-icons.scss */
+/* line 55, ../../scss/_icons.scss */
 .si-square {
   background-color: #666666;
   color: white;
   padding: 7px;
 }
-/* line 61, ../../scss/_social-icons.scss */
+/* line 61, ../../scss/_icons.scss */
 .si-square.si-linkedin {
   padding: 7px 8.5px;
 }
 
-/* line 66, ../../scss/_social-icons.scss */
+/* line 66, ../../scss/_icons.scss */
 .si-circle {
   background-color: #666666;
   color: white;
@@ -89,369 +72,369 @@ you can use the generic selector below, but it's slower:
   -o-border-radius: 18px;
   border-radius: 18px;
 }
-/* line 73, ../../scss/_social-icons.scss */
+/* line 73, ../../scss/_icons.scss */
 .si-circle.si-linkedin {
   padding: 7px 8.5px;
 }
 
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-twitter {
   color: #2ca8d2;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-twitter.si-square {
   background-color: #2ca8d2;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-twitter.si-circle {
   background-color: #2ca8d2;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-facebook {
   color: #305891;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-facebook.si-square {
   background-color: #305891;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-facebook.si-circle {
   background-color: #305891;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-linkedin {
   color: #4498c8;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-linkedin.si-square {
   background-color: #4498c8;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-linkedin.si-circle {
   background-color: #4498c8;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-googleplus {
   color: #ce4d39;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-googleplus.si-square {
   background-color: #ce4d39;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-googleplus.si-circle {
   background-color: #ce4d39;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-youtube {
   color: #e02927;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-youtube.si-square {
   background-color: #e02927;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-youtube.si-circle {
   background-color: #e02927;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-feed {
   color: #f9a144;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-feed.si-square {
   background-color: #f9a144;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-feed.si-circle {
   background-color: #f9a144;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-mail {
   color: #738a8d;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-mail.si-square {
   background-color: #738a8d;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-mail.si-circle {
   background-color: #738a8d;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-flickr {
   color: #de006a;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-flickr.si-square {
   background-color: #de006a;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-flickr.si-circle {
   background-color: #de006a;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-github {
   color: #85d768;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-github.si-square {
   background-color: #85d768;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-github.si-circle {
   background-color: #85d768;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-wordpress {
   color: #999999;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-wordpress.si-square {
   background-color: #999999;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-wordpress.si-circle {
   background-color: #999999;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-blogger {
   color: #f89738;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-blogger.si-square {
   background-color: #f89738;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-blogger.si-circle {
   background-color: #f89738;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-tumblr {
   color: #2c4762;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-tumblr.si-square {
   background-color: #2c4762;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-tumblr.si-circle {
   background-color: #2c4762;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-yahoo {
   color: #572c73;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-yahoo.si-square {
   background-color: #572c73;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-yahoo.si-circle {
   background-color: #572c73;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-soundcloud {
   color: #ff3600;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-soundcloud.si-square {
   background-color: #ff3600;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-soundcloud.si-circle {
   background-color: #ff3600;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-skype {
   color: #01aef2;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-skype.si-square {
   background-color: #01aef2;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-skype.si-circle {
   background-color: #01aef2;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-reddit {
   color: black;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-reddit.si-square {
   background-color: black;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-reddit.si-circle {
   background-color: black;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-lastfm {
   color: #e31c23;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-lastfm.si-square {
   background-color: #e31c23;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-lastfm.si-circle {
   background-color: #e31c23;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-stackoverflow {
   color: #fca733;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-stackoverflow.si-square {
   background-color: #fca733;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-stackoverflow.si-circle {
   background-color: #fca733;
   color: white;
 }
-/* line 79, ../../scss/_social-icons.scss */
+/* line 79, ../../scss/_icons.scss */
 .si-colored.si-pinterest {
   color: #cb2028;
 }
-/* line 82, ../../scss/_social-icons.scss */
+/* line 82, ../../scss/_icons.scss */
 .si-colored.si-pinterest.si-square {
   background-color: #cb2028;
   color: white;
 }
-/* line 87, ../../scss/_social-icons.scss */
+/* line 87, ../../scss/_icons.scss */
 .si-colored.si-pinterest.si-circle {
   background-color: #cb2028;
   color: white;
 }
 
-/* line 116, ../../scss/_social-icons.scss */
+/* line 116, ../../scss/_icons.scss */
 .si-twitter:before {
   content: "\e600";
 }
 
-/* line 119, ../../scss/_social-icons.scss */
+/* line 119, ../../scss/_icons.scss */
 .si-facebook:before {
   content: "\e601";
 }
 
-/* line 122, ../../scss/_social-icons.scss */
+/* line 122, ../../scss/_icons.scss */
 .si-googleplus:before {
   content: "\e602";
 }
 
-/* line 125, ../../scss/_social-icons.scss */
+/* line 125, ../../scss/_icons.scss */
 .si-youtube:before {
   content: "\e603";
 }
 
-/* line 128, ../../scss/_social-icons.scss */
+/* line 128, ../../scss/_icons.scss */
 .si-flickr:before {
   content: "\e604";
 }
 
-/* line 131, ../../scss/_social-icons.scss */
+/* line 131, ../../scss/_icons.scss */
 .si-github:before {
   content: "\e605";
 }
 
-/* line 134, ../../scss/_social-icons.scss */
+/* line 134, ../../scss/_icons.scss */
 .si-wordpress:before {
   content: "\e606";
 }
 
-/* line 137, ../../scss/_social-icons.scss */
+/* line 137, ../../scss/_icons.scss */
 .si-blogger:before {
   content: "\e607";
 }
 
-/* line 140, ../../scss/_social-icons.scss */
+/* line 140, ../../scss/_icons.scss */
 .si-tumblr:before {
   content: "\e608";
 }
 
-/* line 143, ../../scss/_social-icons.scss */
+/* line 143, ../../scss/_icons.scss */
 .si-yahoo:before {
   content: "\e609";
 }
 
-/* line 146, ../../scss/_social-icons.scss */
+/* line 146, ../../scss/_icons.scss */
 .si-soundcloud:before {
   content: "\e60a";
 }
 
-/* line 149, ../../scss/_social-icons.scss */
+/* line 149, ../../scss/_icons.scss */
 .si-skype:before {
   content: "\e60b";
 }
 
-/* line 152, ../../scss/_social-icons.scss */
+/* line 152, ../../scss/_icons.scss */
 .si-reddit:before {
   content: "\e60c";
 }
 
-/* line 155, ../../scss/_social-icons.scss */
+/* line 155, ../../scss/_icons.scss */
 .si-lastfm:before {
   content: "\e60d";
 }
 
-/* line 158, ../../scss/_social-icons.scss */
+/* line 158, ../../scss/_icons.scss */
 .si-feed:before {
   content: "\e60e";
 }
 
-/* line 161, ../../scss/_social-icons.scss */
+/* line 161, ../../scss/_icons.scss */
 .si-mail:before {
   content: "\e60f";
 }
 
-/* line 164, ../../scss/_social-icons.scss */
+/* line 164, ../../scss/_icons.scss */
 .si-stackoverflow:before {
   content: "\e610";
 }
 
-/* line 167, ../../scss/_social-icons.scss */
+/* line 167, ../../scss/_icons.scss */
 .si-pinterest:before {
   content: "\e611";
 }
 
-/* line 170, ../../scss/_social-icons.scss */
+/* line 170, ../../scss/_icons.scss */
 .si-linkedin:before {
   content: "\e612";
 }
