--- a/assets/css/social-icons.css
+++ b/assets/css/social-icons.css
@@ -42,399 +42,419 @@ you can use the generic selector below, but it's slower:
 .si, .si-square, .si-circle {
   color: #666666;
   display: inline-block;
-  font-size: 22px;
-  padding: 2px;
+  font-size: 24px;
+  padding: 4px;
 }
 /* line 50, ../../scss/_icons.scss */
-.si.si-small, .si-small.si-square, .si-small.si-circle {
-  font-size: 16px;
+.si.si-linkedin, .si-linkedin.si-square, .si-linkedin.si-circle {
+  padding: 4px 5.5px;
 }
 
 /* line 55, ../../scss/_icons.scss */
 .si-square {
   background-color: #666666;
   color: white;
-  padding: 7px;
-}
-/* line 61, ../../scss/_icons.scss */
-.si-square.si-linkedin {
-  padding: 7px 8.5px;
 }
 
-/* line 66, ../../scss/_icons.scss */
+/* line 61, ../../scss/_icons.scss */
 .si-circle {
   background-color: #666666;
+  font-size: 20px;
   color: white;
-  padding: 7px;
-  -webkit-border-radius: 18px;
-  -moz-border-radius: 18px;
-  -ms-border-radius: 18px;
-  -o-border-radius: 18px;
-  border-radius: 18px;
+  padding: 6px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+  border-radius: 16px;
 }
-/* line 73, ../../scss/_icons.scss */
+/* line 69, ../../scss/_icons.scss */
 .si-circle.si-linkedin {
-  padding: 7px 8.5px;
+  padding: 6px 7.5px;
 }
 
-/* line 79, ../../scss/_icons.scss */
+/* line 74, ../../scss/_icons.scss */
+.si-small {
+  font-size: 12px;
+  padding: 2px;
+}
+/* line 78, ../../scss/_icons.scss */
+.si-small.si-linkedin {
+  padding: 2px 3px;
+}
+/* line 82, ../../scss/_icons.scss */
+.si-small.si-circle {
+  font-size: 10px;
+  padding: 3px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+  border-radius: 8px;
+}
+/* line 87, ../../scss/_icons.scss */
+.si-small.si-circle.si-linkedin {
+  padding: 3px 3.5px;
+}
+
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-twitter {
   color: #2ca8d2;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-twitter.si-square {
   background-color: #2ca8d2;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-twitter.si-circle {
   background-color: #2ca8d2;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-facebook {
   color: #305891;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-facebook.si-square {
   background-color: #305891;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-facebook.si-circle {
   background-color: #305891;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-linkedin {
   color: #4498c8;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-linkedin.si-square {
   background-color: #4498c8;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-linkedin.si-circle {
   background-color: #4498c8;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-googleplus {
   color: #ce4d39;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-googleplus.si-square {
   background-color: #ce4d39;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-googleplus.si-circle {
   background-color: #ce4d39;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-youtube {
   color: #e02927;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-youtube.si-square {
   background-color: #e02927;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-youtube.si-circle {
   background-color: #e02927;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-feed {
   color: #f9a144;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-feed.si-square {
   background-color: #f9a144;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-feed.si-circle {
   background-color: #f9a144;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-mail {
   color: #738a8d;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-mail.si-square {
   background-color: #738a8d;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-mail.si-circle {
   background-color: #738a8d;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-flickr {
   color: #de006a;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-flickr.si-square {
   background-color: #de006a;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-flickr.si-circle {
   background-color: #de006a;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-github {
   color: #85d768;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-github.si-square {
   background-color: #85d768;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-github.si-circle {
   background-color: #85d768;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-wordpress {
   color: #999999;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-wordpress.si-square {
   background-color: #999999;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-wordpress.si-circle {
   background-color: #999999;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-blogger {
   color: #f89738;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-blogger.si-square {
   background-color: #f89738;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-blogger.si-circle {
   background-color: #f89738;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-tumblr {
   color: #2c4762;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-tumblr.si-square {
   background-color: #2c4762;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-tumblr.si-circle {
   background-color: #2c4762;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-yahoo {
   color: #572c73;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-yahoo.si-square {
   background-color: #572c73;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-yahoo.si-circle {
   background-color: #572c73;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-soundcloud {
   color: #ff3600;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-soundcloud.si-square {
   background-color: #ff3600;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-soundcloud.si-circle {
   background-color: #ff3600;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-skype {
   color: #01aef2;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-skype.si-square {
   background-color: #01aef2;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-skype.si-circle {
   background-color: #01aef2;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-reddit {
   color: black;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-reddit.si-square {
   background-color: black;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-reddit.si-circle {
   background-color: black;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-lastfm {
   color: #e31c23;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-lastfm.si-square {
   background-color: #e31c23;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-lastfm.si-circle {
   background-color: #e31c23;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-stackoverflow {
   color: #fca733;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-stackoverflow.si-square {
   background-color: #fca733;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-stackoverflow.si-circle {
   background-color: #fca733;
   color: white;
 }
-/* line 79, ../../scss/_icons.scss */
+/* line 94, ../../scss/_icons.scss */
 .si-colored.si-pinterest {
   color: #cb2028;
 }
-/* line 82, ../../scss/_icons.scss */
+/* line 97, ../../scss/_icons.scss */
 .si-colored.si-pinterest.si-square {
   background-color: #cb2028;
   color: white;
 }
-/* line 87, ../../scss/_icons.scss */
+/* line 102, ../../scss/_icons.scss */
 .si-colored.si-pinterest.si-circle {
   background-color: #cb2028;
   color: white;
 }
 
-/* line 116, ../../scss/_icons.scss */
+/* line 131, ../../scss/_icons.scss */
 .si-twitter:before {
   content: "\e600";
 }
 
-/* line 119, ../../scss/_icons.scss */
+/* line 134, ../../scss/_icons.scss */
 .si-facebook:before {
   content: "\e601";
 }
 
-/* line 122, ../../scss/_icons.scss */
+/* line 137, ../../scss/_icons.scss */
 .si-googleplus:before {
   content: "\e602";
 }
 
-/* line 125, ../../scss/_icons.scss */
+/* line 140, ../../scss/_icons.scss */
 .si-youtube:before {
   content: "\e603";
 }
 
-/* line 128, ../../scss/_icons.scss */
+/* line 143, ../../scss/_icons.scss */
 .si-flickr:before {
   content: "\e604";
 }
 
-/* line 131, ../../scss/_icons.scss */
+/* line 146, ../../scss/_icons.scss */
 .si-github:before {
   content: "\e605";
 }
 
-/* line 134, ../../scss/_icons.scss */
+/* line 149, ../../scss/_icons.scss */
 .si-wordpress:before {
   content: "\e606";
 }
 
-/* line 137, ../../scss/_icons.scss */
+/* line 152, ../../scss/_icons.scss */
 .si-blogger:before {
   content: "\e607";
 }
 
-/* line 140, ../../scss/_icons.scss */
+/* line 155, ../../scss/_icons.scss */
 .si-tumblr:before {
   content: "\e608";
 }
 
-/* line 143, ../../scss/_icons.scss */
+/* line 158, ../../scss/_icons.scss */
 .si-yahoo:before {
   content: "\e609";
 }
 
-/* line 146, ../../scss/_icons.scss */
+/* line 161, ../../scss/_icons.scss */
 .si-soundcloud:before {
   content: "\e60a";
 }
 
-/* line 149, ../../scss/_icons.scss */
+/* line 164, ../../scss/_icons.scss */
 .si-skype:before {
   content: "\e60b";
 }
 
-/* line 152, ../../scss/_icons.scss */
+/* line 167, ../../scss/_icons.scss */
 .si-reddit:before {
   content: "\e60c";
 }
 
-/* line 155, ../../scss/_icons.scss */
+/* line 170, ../../scss/_icons.scss */
 .si-lastfm:before {
   content: "\e60d";
 }
 
-/* line 158, ../../scss/_icons.scss */
+/* line 173, ../../scss/_icons.scss */
 .si-feed:before {
   content: "\e60e";
 }
 
-/* line 161, ../../scss/_icons.scss */
+/* line 176, ../../scss/_icons.scss */
 .si-mail:before {
   content: "\e60f";
 }
 
-/* line 164, ../../scss/_icons.scss */
+/* line 179, ../../scss/_icons.scss */
 .si-stackoverflow:before {
   content: "\e610";
 }
 
-/* line 167, ../../scss/_icons.scss */
+/* line 182, ../../scss/_icons.scss */
 .si-pinterest:before {
   content: "\e611";
 }
 
-/* line 170, ../../scss/_icons.scss */
+/* line 185, ../../scss/_icons.scss */
 .si-linkedin:before {
   content: "\e612";
 }
