--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -28,7 +28,9 @@ $siPinterestColor: #cb2028;
 
 // Default Font Sizes
 $si16x16FontSize: 16px;
+$si24x24FontSize: 24px;
 $si32x32FontSize: 32px;
+$si48x48FontSize: 48px;
 
 $siSquare32x32FontSize: 24px;
 $siSquare32x32Padding: 4px;
@@ -41,6 +43,12 @@ $siSquarePadding: $siSquare32x32Padding;
 
 $siSquare16x16FontSize: 12px;
 $siSquare16x16Padding: 2px;
+
+$siSquare24x24FontSize: 18px;
+$siSquare24x24Padding: 3px;
+
+$siSquare48x48FontSize: 38px;
+$siSquare48x48Padding: 5px;
 
 $siCircleFontSize: 20px;
 $siCirclePadding: 6px;
