--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -57,3 +57,11 @@ $siCircleRadius: 16px;
 $siCircle16x16FontSize: 10px;
 $siCircle16x16Padding: 3px;
 $siCircle16x16Radius: 8px;
+
+$siCircle24x24FontSize: 15px;
+$siCircle24x24Padding: 4.5px;
+$siCircle24x24Radius: 12px;
+
+$siCircle48x48FontSize: 33px;
+$siCircle48x48Padding: 7.5px;
+$siCircle48x48Radius: 28px;
